# DojoTap

./: .env.example  .gitignore  README.md  _render_openapi.json  pyproject.toml  render.yaml
.github/workflows/: deploy-pages.yml
backend/app/: __init__.py  auth.py  chessdojo.py  config.py  crypto.py  ct_auto_backfill.py  db.py  main.py  models.py
backend/integrations/chessdojo/: README.md  __init__.py  _cli_common.py  fetch_bearer_token.py  get_progress.py  log_progress.py
backend/integrations/chesstempo/: README.md  __init__.py  fetch_attempts_csv.py  log_unlogged_days.py  requirements.txt
backend/scripts/: api_smoke.py
backend/tests/: test_auth.py  test_chesstempo_csv_parser.py  test_chesstempo_log_unlogged_days.py  test_ct_auto_backfill.py  test_payloads.py  test_preferences.py
docs/: API_NOTES.md  CONTEXT.md  JOURNAL.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: mobile-audit.spec.ts  smoke.spec.ts  visual-audit.spec.ts
frontend/public/: site.webmanifest
frontend/scripts/: ensure-codex-playwright-mcp.mjs  generate-favicons.ps1
frontend/src/: App.vue  api.ts  constants.ts  diagnostics.ts  main.ts  types.ts
frontend/src/components/: FilterBar.vue  TaskTile.vue  TilePicker.vue
frontend/src/styles/: main.css
